--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0",
     "flag-icon-css": "^3.5.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
+    "vue-resource": "^1.5.2",
     "vue-template-compiler": "^2.6.12"
   },
   "version": "0.1.0",
