--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
     "flag-icon-css": "^3.5.0",
+    "slim-select": "^1.27.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-resource": "^1.5.2",
