--- a/render.yaml
+++ b/render.yaml
@@ -18,3 +18,7 @@ services:
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
+      - key: RAILS_MASTER_KEY
+        sync: false
+      - key: RAILS_MASTER_KEY
+        sync: false    
